--- a/oopsla21/intro.tex
+++ b/oopsla21/intro.tex
@@ -9,11 +9,9 @@ The memory allocator is one such component that could help solve these challenge
 However, general-purpose memory allocators, such as dlmalloc~\citep{dlmalloc},  Hoard~\citep{Hoard}, TCMalloc~\citep{tcmalloc}, jemalloc~\citep{jemalloc}, SuperMalloc~\citep{supermalloc} and Scalloc~\citep{Scalloc}, were designed for symmetric multiprocessing machines without considering the heterogeneity of the underlying hardware~\citep{mimalloc}. As a result, they can not achieve good performance, based on existing work~\citep{tcmallocnew, yang2019jarena} and our evaluation. In 2008, Kaminski built the first NUMA-aware memory allocator on top of TCMalloc~\citep{tcmallocnew}, called as \TN{} in the remainder of this paper. After that, multiple allocators with NUMA support were developed~\citep{ kim2013node, yang2019jarena, mimalloc}, but they typically take a very similar design as \TN{} , as further discussed in Section~\ref{sec:related}. Therefore, only \TN{}'s design is further described here. 
 
 %, but without considering interconnect congestion and node imbalance that may also significantly affect the performance. 
-\TN{} inherits per-thread cache from TCMalloc, but adding a freelist array and a page-span for each NUMA node. Allocations will be satisfied in an order from a per-thread cache, per-node freelist, and then per-node page-span. Initially, the memory of each page-span will be mapped to the node so that physical memory is also allocated from the same node. However, \textit{TCMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\citep{tcmalloc}. \toconfirm{However, if such an object originates from a remote node initially, especially in the producer-consumer model, it obviously results in unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only forces the thread to access its stack remotely but also reloads all the data that are already in the cache of its original node. Further, after migration, all deallocated objects of the thread are later put into the freelist of the new node, causing unnecessary remote accesses. To the best of our knowledge, none of the existing NUMA allocators address these issues well.}
+\TN{} inherits per-thread cache from TCMalloc, but adding a freelist array and a page-span for each NUMA node. Allocations will be satisfied in an order from a per-thread cache, per-node freelist, and then per-node page-span. Initially, the memory of each page-span will be mapped to the node so that physical memory is also allocated from the same node. However, TCMalloc-NUMA has multiple issues that may significantly affect its performance. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\citep{tcmalloc}. However, if such an object originates from a remote node initially, especially in the producer-consumer model, it obviously results in unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only forces the thread to access its stack remotely but also reloads all the data that are already in the cache of its original node. Further, after migration, all deallocated objects of the thread are later put into the freelist of the new node, causing unnecessary remote accesses. To the best of our knowledge, none of the existing NUMA allocators address these issues well.
 
-\todo{Origin: However, if such an object is originated from a remote node initially, especially in producer-consumer model, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. Based on our knowledge, none of existing NUMA allocators solves these issues as well.}
-
-\textbf{This paper proposes a novel memory allocator -- \NM{} -- that considers both hardware heterogeneity and allocation/deallocation attributes, with its fine-grained memory management}. \NM{} not only deals with hardware heterogeneity, but also employs different policies for objects with different attributes, such as share-ability, sizes, and origin. We proposes multiple mechanisms that improve both load balance and locality, as detailed in the following.   
+\textbf{This paper proposes a novel memory allocator -- \NM{} -- that considers both hardware heterogeneity and allocation/deallocation attributes, with its fine-grained memory management}. \NM{} not only deals with hardware heterogeneity, but also employs different policies for objects with different attributes, such as share-ability, sizes, phase, and origin. We proposes multiple mechanisms that improve both load balance and locality, as detailed in the following.   
 
 %Simply integrating thread binding, heap interleaving and huge page does not guarantee good performance. Instead, carefully design is required to properly coordinate the thread scheduling, memory object allocation/deallocation and huge page management to achieve better performance.
 
@@ -30,13 +28,11 @@ In the future, we plan to support user-controlled binding.
 %in order to reduce load imbalance or interconnect congestion that occurs when a large amount of memory allocated in the initial thread are accessed extensively by children threads running on different nodes. 
 %second, it may cause page-level false sharing, if a multi-page object is accessed concurrently by these threads, the most common NUMA performance detected by existing tools~\citep{XULIU, MemProf}. The underlying reason is that the first-touch policy makes objects allocated from the initial thread will be allocated from its corresponding node, as further described in Section~\ref{sec:ossupport}. The interleaved heap helps node balance, and alleviates page-level false sharing. 
  
-%\todo{\NM{} further introduces \textbf{selective huge pages} in order to exploit the benefit of huge pages. Huge pages will improve the performance if they are employed properly~\citep{DBLP:conf/asplos/MaasAIJMR20}, due to the reduction of TLB misses. However, the default transparent huge pages (THP) have been observed to hurt the performance on the NUMA architecture, due to unnecessary memory wastes and page-level false sharing~\citep{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19, DBLP:conf/asplos/MaasAIJMR20}. \textit{\NM{} controls the type of objects that will be allocated from huge pages, in order to avoid the issues caused by huge pages}. In \NM{}, huge pages will be utilized only for big objects, as well as small objects with extensive allocations. This design is to reduce memory wastes. Based on our evaluation in Section~\ref{sec:hugepage}, \NM{} selective huge pages do not hurt the performance, compared to transparent huge pages. }
+\NM{} further introduces \textbf{selective huge pages} in order to exploit the benefit of huge pages. Huge pages will improve the performance if they are employed properly~\citep{DBLP:conf/asplos/MaasAIJMR20}, due to the reduction of TLB misses. However, the default transparent huge pages (THP) have been observed to hurt the performance on the NUMA architecture, due to unnecessary memory wastes and page-level false sharing~\citep{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19, DBLP:conf/asplos/MaasAIJMR20}. \textit{\NM{} controls the type of objects that will be allocated from huge pages, in order to avoid the issues caused by huge pages}. In \NM{}, huge pages will be utilized only for big objects, as well as small objects with extensive allocations. This design is to reduce memory wastes. Based on our evaluation in Section~\ref{sec:hugepage}, \NM{} selective huge pages do not hurt the performance, compared to transparent huge pages.
  
-\NM{} also solves some implementation challenges. Since \NM{} has many per-thread and per-node heaps, it is necessary to move freed objects between per-thread freelists and per-node freelists frequently. \NM{} designs an efficient mechanism to move objects between them, without traversing all objects in the freelists as TCMalloc~\citep{tcmalloc}. It allocates the metadata of per-thread and per-node heap on the local nodes in order to further reduce unnecessary remote accesses.  
+\NM{} also solves some implementation challenges. Since \NM{} has many per-thread and per-node heaps, it is necessary to move freed objects between per-thread freelists and per-node freelists frequently. \NM{} designs an efficient mechanism to move objects between them, without traversing all objects in the freelists as TCMalloc~\citep{tcmalloc}. It allocates the metadata of per-thread and per-node heap on the local nodes in order to further reduce unnecessary remote accesses.  It also reduces memory consumption of huge pages by making multiple threads share the same memory block, overcoming one issue of Scalloc~\citep{Scalloc}. 
 
-%It also reduces memory consumption of huge pages by making multiple threads share the same bag, overcoming one issue of Scalloc~\citep{Scalloc}. 
-
-We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TCMalloc~\citep{tcmalloc}, jemalloc~\citep{jemalloc}, Intel TBB~\citep{tbb}, Scalloc~\citep{Scalloc}, and mimalloc~\citep{mimalloc}. \toconfirm{\NM{} achieves around 14\% speedup comparing to the default Linux allocator, which is also 10\% faster than the second-best one (e.g., jemalloc). For the best case, \NM{} runs up to $2.18\times$ faster than the default allocator, and $1.96\times$ faster than the second-best one (jemalloc)}. \NM{} is much more scalable than other allocators based on our evaluation. \NM{} is ready for practical employment, due to its high performance and good scalability. \\
+We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TCMalloc~\citep{tcmalloc}, jemalloc~\citep{jemalloc}, Intel TBB~\citep{tbb}, Scalloc~\citep{Scalloc}, and mimalloc~\citep{mimalloc}. \NM{} achieves around 18.5\%  (GEOMEAN) speedup comparing to the default Linux allocator, which is also 15.8\% faster than the second-best one (e.g., TcMalloc). For the best case, \NM{} runs up to $6.4\times$ faster than the default allocator, and $4.6\times$ faster than the second-best one (TcMalloc). \NM{} is much more scalable than other allocators based on our evaluation. \NM{} is ready for practical employment, due to its high performance and good scalability. \\
 
 \textbf{Overall, this paper makes the following contributions:} 
 
@@ -44,8 +40,7 @@ We have performed extensive evaluation on synthetic and real applications, and c
 
 \item It proposes a \textit{fine-grained memory management} method that will consider both hardware heterogeneity and different allocation/deallocation attributes in memory management operations.
 
-\item It proposes an \textit{origin-based memory management} to ensure locality of all memory allocations. It also proposes \textit{the interleaved heap and node-balanced thread binding} to reduce node imbalance.
-%, and \textit{selective huge pages} to overcome the issues of transparent huge pages. 
+\item It proposes an \textit{origin-based memory management} to ensure locality of all memory allocations. It also proposes \textit{the interleaved heap and node-balanced thread binding} to reduce node imbalance, and \textit{selective huge pages} to overcome the issues of transparent huge pages. 
 
 \item It presents the development and implementation of \NM{}, which has a better performance and scalability than widely-used commercial allocators, such as TCMalloc, jemalloc, and Intel TBB. 
 
