--- a/oopsla21/implementation.tex
+++ b/oopsla21/implementation.tex
@@ -69,13 +69,10 @@ Note that the interleaved heap cannot be achieved by using existing NUMA utiliti
 \subsubsection{Node-Balanced Thread Binding} 
 As described in Section~\ref{sec:intro}, thread migration will cause multiple performance issues for the NUMA architecture. Therefore, \NM{} binds each thread to a node specifically in order to avoid thread migration cross different nodes. To improve the balance, \NM{} binds threads to different nodes in an interleaved way so that every node will have a similar number of threads. The first thread will be bound to the node that it is scheduled to run by the OS, and the second thread will be bound to its next node, and so on. Note that \NM{} only binds a thread to a node, instead of a core, which still allows the scheduling initiated by the OS. To perform the binding correctly, \NM{} obtains the hardware topology in the initialization phase via the \texttt{numa\_node\_to\_cpus} API, which tells the relationship between each CPU core and each memory node. Then it intercepts all thread creations in order to bind a newly-created thread to a specific node. In the future, we plan to support user-controlled binding.
 
-
- 
-\begin{comment}
 \subsection{Selective Huge Pages} 
 \label{sec:hugepage}
 
- Based on the existing study~\citep{hugepages}, huge pages can reduce Translation Look-aside Buffer (TLB) misses, and reduce the interferences on the cache utilization caused by TLB misses, since the same size of TLB entries will cover a larger space of memory. However, existing transparent huge page support is not good for the performance~\citep{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}, due to hot page effect, page-level false sharing, and increased memory footprint~\citep{DBLP:conf/asplos/MaasAIJMR20}.
+ Based on the existing study~\citep{hugepages}, huge pages can reduce Translation Look-aside Buffer (TLB) misses, since the same size of TLB entries will cover a larger space of memory. However, existing transparent huge page support is not good for the performance~\citep{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}, due to hot page effect, page-level false sharing, and increased memory footprint~\citep{DBLP:conf/asplos/MaasAIJMR20}.
  
 \NM{} proposes explicit huge pages to avoid these issues that could always benefit the performance based on our evaluation in Section~\ref{sec:hugepage}. The basic idea of \NM{} is to carefully choose which objects that should be allocated from huge pages: first, shared objects should not be allocated from huge pages, which may introduce page-level false sharing that multiple threads are accessing the same huge page. This will cause unnecessary load imbalance due to concurrent accesses, and remote accesses. Second, if we only utilize partial memory in the same huge pages, then we may waste the remaining memory in the same page. This problem will become more serious for \NM{}'s design, since it is using a big bag (1MB) to hold objects with the same size. 
 
@@ -85,7 +82,6 @@ Based on these observations,  \NM{} only employs huge pages for large objects, w
 %In addition to large objects that has the size larger than the size of a huge page, huge pages are only utilized for small objects that are predicted to be used a lot.  \NA{} employs the history of memory allocation to predict this. 
 %Each per-node heap is further divided into two parts as illustrated in Figure~\ref{fig:overview}: small objects will be allocated from the first half and will be allocated using small pages, while big objects will be allocated from the second half with huge pages (2MB). When a big object (with the huge page) is utilized for small objects, only frequently-allocated small objects can utilize such an object. We believe that our design balances the performance and memory consumption.   
 
-\end{comment}
 
 \subsection{Other Mechanisms}
 \label{sec: others}
@@ -128,7 +124,7 @@ Each per-node freelist has three types of operations that can be greatly reduced
 
 \paragraph{Node-Local Metadata} \NM{} guarantees that all of the metadata is always allocated in the same node, based on its thread binding as described in Section~\ref{sec:balance}. Such metadata includes per-node and per-thread freelists for different size classes, and freelists for big objects. Similarly, \NM{} utilizes the \texttt{mbind} system call to bind the memory to a specific node.  
 
-%\paragraph{Reducing Memory Waste} \NM{} utilizes multiple mechanisms to reduce memory wastes. First, if a thread exits, then all memory will be utilized by a new thread. Second, \NM{} reduces memory wastes when transparent huge pages are employed.  Multiple threads in the same node will share the same bag (for the same size class), instead of having a separate bag for each thread.  That is, when  a thread is running out of the memory, it obtains multiple objects at a time from the corresponding bag, typically in a granularity of a small page, instead of getting a new bag. Based on our evaluation, this mechanism reduces most of memory consumption, with the transparent huge page support by default.  
+\paragraph{Reducing Memory Waste} \NM{} utilizes multiple mechanisms to reduce memory wastes when transparent huge pages are employed.  Multiple threads in the same node will share the same memory block (reserved for the same size class), instead of having a separate block for each thread.  That is, when  a thread is running out of the memory, it obtains multiple objects at a time from the corresponding bag, typically in a granularity of a small page, instead of getting a new bag. Based on our evaluation, this mechanism reduces most of memory consumption, with the transparent huge page support by default.  
 
  %every thread has its own freelists for each size class so that there is no need to acquire the lock when an allocation can be satisfied from its per-thread heap, similar to TCMalloc. That is, two threads will not share the same per-thread heap. However, some applications may create new threads after some threads have exited. \NM{} re-utilizes the memory for these exited threads. Basically, \NM{} intercepts thread joins and cancels so that it can assign heaps of exited threads for newly-created threads, and re-utilize their heaps correspondingly.  
 
