--- a/HPCA2022/implementation.tex
+++ b/HPCA2022/implementation.tex
@@ -19,11 +19,11 @@
 
 As discussed in Section~\ref{sec:intro}, \NM{} proposes an origin-based memory management that should check the origin of every object upon deallocation. In order to support fast checking, \NM{}'s heap layout is designed as  Figure~\ref{fig:overview}. \NM{} requests a large and continuous block of memory from the underlying OS initially, and then divides it evenly into multiple regions based on the number of hardware nodes. Each region is bound to a different physical node via \texttt{mbind} system call. In particular, the first region is bound to the first node, the second one is bound to the second node, and so on. This design enables to compute the physical node quickly from a memory address: we could compute the index of physical node by dividing the heap offset by the region size. This layout is different from existing allocators, based on our knowledge. 
 
-%\NM{} borrows some of these existing mechanisms. First, it uses different mechanisms to manage small and big objects. Second, small objects are also managed by size classes using the BiBOP-style. Third, similar to existing work, such as Linux and TCMalloc~\citep{tcmalloc}, \NA{} utilizes different freelists to track freed objects, and uses the first word of freed objects to link different objects. But the difference of \NM{} is further described in Section~\ref{sec:implement}.
+%\NM{} borrows some of these existing mechanisms. First, it uses different mechanisms to manage small and big objects. Second, small objects are also managed by size classes using the BiBOP-style. Third, similar to existing work, such as Linux and TCMalloc~\cite{tcmalloc}, \NA{} utilizes different freelists to track freed objects, and uses the first word of freed objects to link different objects. But the difference of \NM{} is further described in Section~\ref{sec:implement}.
 
 \NM{} also manages small and big objects differently, which is similar to existing allocators as discussed in Section~\ref{sec:commondesign}. Small objects are organized by size classes, and each request will be satisfied from a particular size class. \NA{} utilizes fine-grained size classes for small objects, such as 16 bytes apart for objects less than 128 bytes, and 32 bytes apart for objects between 128 bytes and 256 bytes, then power-of-2 sizes afterwards. In \NM{}'s design, big objects are those ones with the size larger than 512K, which are typically aligned up to megabytes. As shown as Figure~\ref{fig:overview}, each per-node region will be further divided into two sub-regions, one for small objects, and one for big objects. The \texttt{pbSmall} pointer is utilized to track never-allocated small objects, and big ones are tracked with \texttt{pbBig} pointer. 
 
-For small objects, \NM{} utilizes the well-known  ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' (BiBOP) style that all objects in the same bag (1 MB by default) will have the same size class. Big objects will be always aligned to 1MB. In order to improve the reliability~\citep{FreeGuard, Guarder}, \NM{} tracks the size information and availability information in a separate area (shown as ``PerMBInfo'' of Figure~\ref{fig:overview}): it tracks the size of each size class for small objects, and the size of the big object (aligned to 1 MB) for big objects. This data structure also includes the used/free information for big objects, which allows to coalesce multiple continuous big objects into a bigger object upon deallocations. To save space, \NM{} utilizes its lowest significant bit to encode the availability information.
+For small objects, \NM{} utilizes the well-known  ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' (BiBOP) style that all objects in the same bag (1 MB by default) will have the same size class. Big objects will be always aligned to 1MB. In order to improve the reliability~\cite{FreeGuard, Guarder}, \NM{} tracks the size information and availability information in a separate area (shown as ``PerMBInfo'' of Figure~\ref{fig:overview}): it tracks the size of each size class for small objects, and the size of the big object (aligned to 1 MB) for big objects. This data structure also includes the used/free information for big objects, which allows to coalesce multiple continuous big objects into a bigger object upon deallocations. To save space, \NM{} utilizes its lowest significant bit to encode the availability information.
 
 Typically freed objects of the same size class will be tracked with freelists. In order to further reduce the contention, \NM{} employs per-thread heap that maintains a freelist for each size class, which requires no protection since each thread has its own per-thread heap. However, this may introduce memory blowup, as addressed in Section~\ref{sec: others}. 
 
@@ -47,7 +47,7 @@ Second, \NM{} always ensures node-local memory allocations. For small objects, i
 \NM{} further proposes two additional mechanisms to reduce node imbalance, where it is the first to implement these mechanisms inside the memory allocator. 
 
 \subsubsection{Interleaved Heap} 
-\NA{} proposes an interleaved heap that is inspired by existing profilers\citep{XULIU, MemProf}: most NUMA performances issues  are related to shared objects allocated in the main thread. Due to the default first-touch policy~\citep{lameter2013numa, diener2015locality}, objects allocated and touched by the main thread are typically allocated in the first node that the main thread is running on. But these objects can be passed to multiple child threads, causing the load imbalance issue: the memory controller of this node will be concurrently accessed by multiple threads, leading to the performance bottleneck on this node. To overcome this issue, \NA{} reserves a range of memory for such objects, called as ``Interleaved Heap'' in Figure~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that physical pages of this heap will be allocated from all nodes interleavedly. With this design, then all threads can access shared objects allocated in the main thread concurrently, reducing interconnect congestion and load imbalance of a single node. 
+\NA{} proposes an interleaved heap that is inspired by existing profilers\cite{XULIU, MemProf}: most NUMA performances issues  are related to shared objects allocated in the main thread. Due to the default first-touch policy~\cite{lameter2013numa, diener2015locality}, objects allocated and touched by the main thread are typically allocated in the first node that the main thread is running on. But these objects can be passed to multiple child threads, causing the load imbalance issue: the memory controller of this node will be concurrently accessed by multiple threads, leading to the performance bottleneck on this node. To overcome this issue, \NA{} reserves a range of memory for such objects, called as ``Interleaved Heap'' in Figure~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that physical pages of this heap will be allocated from all nodes interleavedly. With this design, then all threads can access shared objects allocated in the main thread concurrently, reducing interconnect congestion and load imbalance of a single node. 
 
 \begin{comment}
 \begin{wrapfigure}{r}{0.6\textwidth}
@@ -61,7 +61,7 @@ Second, \NM{} always ensures node-local memory allocations. For small objects, i
 
 However, \NA{} should not allocate private objects of the first thread from the interleaved heap, since that will create remote accesses unnecessarily. To achieve this, \NM{} further  differentiates shared objects from private objects. Although programmers could provide such information, that will require the change of programs or manual intervention. Instead, \NM{} utilizes a simple heuristics to identify potentially-shared objects based on allocation callsites: each allocation callsite is treated as a shared one initially, and is allocated from the interleaved heap; Whenever an object is deallocated before creating children threads, indicating such an object is a private one for the main thread,  all objects from the corresponding callsite are considered to be private ones, and then are only allocated from the per-node heap afterward. 
 
-\NM{} monitors allocation/deallocation pattern to identify the share-ability of each callsite. If an allocation callsite is found to be private, then all allocations from this callsite should not allocate from the interleaved heap, but from the normal heap. Therefore, a challenge is to obtain and compare the callsite of each allocation so that we could determine the heap based on the share-ability. In fact, this may introduce high overhead for applications with large amount of allocations, if using the \texttt{backtrace}~\citep{DBLP:conf/icse/SumnerZWZ10, DBLP:conf/cgo/ZengR0AJ014}. For the performance reason, \NA{} utilizes the sum of the stack position and the return address of the allocation invocation to identify a callsite, called ``\textit{callsite key}''. This combination is able to differentiate callsites correctly if an application does not have allocation wrappers, since stack positions can be utilized to identify the number of functions in the stack and the return address tells the invocation placement inside the same function. If a callsite is misidentified, it will not cause any correctness issue, but with some performance penalties/losses. For the performance reason, \NA{} utilizes a hash table to track the status of every callsite. 
+\NM{} monitors allocation/deallocation pattern to identify the share-ability of each callsite. If an allocation callsite is found to be private, then all allocations from this callsite should not allocate from the interleaved heap, but from the normal heap. Therefore, a challenge is to obtain and compare the callsite of each allocation so that we could determine the heap based on the share-ability. In fact, this may introduce high overhead for applications with large amount of allocations, if using the \texttt{backtrace}~\cite{DBLP:conf/icse/SumnerZWZ10, DBLP:conf/cgo/ZengR0AJ014}. For the performance reason, \NA{} utilizes the sum of the stack position and the return address of the allocation invocation to identify a callsite, called ``\textit{callsite key}''. This combination is able to differentiate callsites correctly if an application does not have allocation wrappers, since stack positions can be utilized to identify the number of functions in the stack and the return address tells the invocation placement inside the same function. If a callsite is misidentified, it will not cause any correctness issue, but with some performance penalties/losses. For the performance reason, \NA{} utilizes a hash table to track the status of every callsite. 
  % which is fortunately not very expensive given the limited amount of different callsites. 
  
 Note that the interleaved heap cannot be achieved by using existing NUMA utilities like \texttt{numactl}. Although \texttt{numactl} could also specify memory allocations to be interleaved. But \texttt{numactl} could only set the policy for a whole application. Instead, \NM{} only utilizes the interleaved heap for shared objects that are allocated in the main thread, with its fine-grained memory management. As we evaluated in Section~\ref{sec:interleavedheap}, the interleaved heap is beneficial to the performance for most applications, but not all applications.  Therefore, it is better that the interleaved heap is enabled whenever necessary. 
@@ -72,7 +72,7 @@ As described in Section~\ref{sec:intro}, thread migration will cause multiple pe
 \subsection{Selective Huge Pages} 
 \label{sec:hugepage}
 
- Based on the existing study~\citep{hugepages}, huge pages can reduce Translation Look-aside Buffer (TLB) misses, since the same size of TLB entries will cover a larger space of memory. However, existing transparent huge page support is not good for the performance~\citep{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}, due to hot page effect, page-level false sharing, and increased memory footprint~\citep{DBLP:conf/asplos/MaasAIJMR20}.
+ Based on the existing study~\cite{hugepages}, huge pages can reduce Translation Look-aside Buffer (TLB) misses, since the same size of TLB entries will cover a larger space of memory. However, existing transparent huge page support is not good for the performance~\cite{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}, due to hot page effect, page-level false sharing, and increased memory footprint~\cite{DBLP:conf/asplos/MaasAIJMR20}.
  
 \NM{} proposes explicit huge pages to avoid these issues that could always benefit the performance based on our evaluation in Section~\ref{sec:hugepage}. The basic idea of \NM{} is to carefully choose which objects that should be allocated from huge pages: first, shared objects should not be allocated from huge pages, which may introduce page-level false sharing that multiple threads are accessing the same huge page. This will cause unnecessary load imbalance due to concurrent accesses, and remote accesses. Second, if we only utilize partial memory in the same huge pages, then we may waste the remaining memory in the same page. This problem will become more serious for \NM{}'s design, since it is using a big bag (1MB) to hold objects with the same size. 
 
@@ -88,7 +88,7 @@ Based on these observations,  \NM{} only employs huge pages for large objects, w
 
 \NM{} also implements the following mechanisms in order to reduce the performance and memory overhead. 
 
-\paragraph{Efficient Object Migration} It is important to reduce memory blowup that freed objects by one thread cannot be utilized by other ones~\citep{Hoard}.  \NM{} should move freed objects between per-thread and per-node freelists frequently. On the one hand, when a per-thread freelist has too many freed objects, some of them should be moved to the per-node freelist so that other threads could re-utilize these freed objects. On the other hand, each per-thread list needs to obtain freed objects from its per-node heap, when a thread is running out of the memory. 
+\paragraph{Efficient Object Migration} It is important to reduce memory blowup that freed objects by one thread cannot be utilized by other ones~\cite{Hoard}.  \NM{} should move freed objects between per-thread and per-node freelists frequently. On the one hand, when a per-thread freelist has too many freed objects, some of them should be moved to the per-node freelist so that other threads could re-utilize these freed objects. On the other hand, each per-thread list needs to obtain freed objects from its per-node heap, when a thread is running out of the memory. 
 Therefore, an efficient mechanism is required to support frequent migration. 
 
 A straightforward method is to traverse the freelist to collect a specified number objects, and then moves all of them at a time in order to reduce the synchronization overhead. Both TCMalloc and TCMalloc-NUMA utilize this mechanism, which have the following issues. First, traversing the freed objects of a freelist will actually bring the first lines of these objects to the cache, since the first word of each freed object is used as the pointer for the freelist. This traverse will pollute the cache of the current thread, especially when a thread is moving these objects out. 
@@ -131,7 +131,7 @@ Each per-node freelist has three types of operations that can be greatly reduced
 
 %\paragraph{Transparent Huge Page Support:} During the development, we noticed that excessive memory consumption can be imposed when the OS enables transparent huge pages by default. In order to reduce memory consumption, \NM{} makes multiple threads share the same bag (for the same size class), instead of having a separate bag for each thread. If each thread is running out of the memory, it obtains multiple objects at a time from the corresponding bag. Currently, if a class size is less than one page, then we will at most get objects with the total size of one normal page. Otherwise, it will get 4 objects (with the size less than 64 KB) or 2 objects afterward. Based on our evaluation, this mechanism actually reduces the memory consumption for multiple times for a machine with 128 cores and 8 nodes, with the transparent huge page support by default.  
 
-%\paragraph{Cache Warmup} \NM{} also borrows the cache warmup mechanism of TCMalloc~\citep{tcmalloc}: it will insert all objects in a page into the freelists, if there is no objects in the per-thread freelist. We believe that inserting multiple objects into the freelist will benefit data prefetches, since the insertion is a simple and predictable pattern. With this mechanism, \texttt{raytrace} improves the performance by 10\%. However, this is the only application that we observed such performance improvement. There is no impact on other applications. 
+%\paragraph{Cache Warmup} \NM{} also borrows the cache warmup mechanism of TCMalloc~\cite{tcmalloc}: it will insert all objects in a page into the freelists, if there is no objects in the per-thread freelist. We believe that inserting multiple objects into the freelist will benefit data prefetches, since the insertion is a simple and predictable pattern. With this mechanism, \texttt{raytrace} improves the performance by 10\%. However, this is the only application that we observed such performance improvement. There is no impact on other applications. 
 
 %TCMalloc utilizes a \texttt{mmap} system call to obtain multiple pages (depending on the class size) from the OS each time, when it is running out of the memory for one size class. For such a memory block, TCMalloc inserts all objects of this block into its central freelist at one time. Since TCMalloc utilizes the first word of each object as the pointer for the freelist, this mechanism warms up the cache by referencing the first word of each object during the insertion. According to our observation, this warmup mechanism improves the performance of one application (\texttt{raytrace}) by 10\%. Based on our understanding, the performance improvement is caused by data prefetches, since inserting objects to the freelist has a simple and predictable pattern. \NM{} employs a similar mechanism for small objects with the size less than 256 bytes, and adds all objects inside a page to the per-thread freelist. 
 
